--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@recalibratedsystems/tasks",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "Simple task manager",
   "main": "./lib/index.js",
   "scripts": {
@@ -31,6 +31,7 @@
   "dependencies": {
     "@recalibratedsystems/common": "^0.1.20",
     "nanoid": "^3.3.4",
+    "resolve": "^1.22.1",
     "upath": "^2.0.1"
   }
 }
