--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,22 +1,20 @@
 {
-  "ts-node": {
-    "swc": true
-  },
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "lib",
-    "allowJs": true,
-    "skipLibCheck": true,
+    "emitDeclarationOnly": true,
+    "isolatedModules": false,
+    "declaration": true,
+    "declarationMap": true,
     "strict": true,
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "target": "es2021",
-    "lib": ["es2021"],
+    "lib": ["dom", "es2021"],
+    "allowSyntheticDefaultImports": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "removeComments": true,
     "moduleResolution": "node",
     "module": "commonjs",
   },
