--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@recalibratedsystems/tasks",
-  "version": "0.8.9",
+  "version": "0.9.0",
   "description": "Simple task manager",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "swc ./src -d ./lib",
     "build:types": "tsc -p tsconfig.types.json",
-    "test": "jest"
+    "test": "jest",
+    "check-deps": "npx npm-check-updates --deep",
+    "update-deps": "npx npm-check-updates --deep -u"
   },
   "repository": {
     "type": "git",
@@ -32,14 +34,14 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.231",
-    "@swc/jest": "^0.2.22",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.7.3",
-    "jest": "^28.1.3",
+    "@swc/core": "^1.3.23",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.16",
+    "jest": "^29.3.1",
     "reflect-metadata": "^0.1.13",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@recalibratedsystems/common-cjs": "^0.2.12",
